# allsky-temp-control

./: .gitignore  allsky-temp-control.service  main.py  pyproject.toml  temp-control.py
